[gd_scene load_steps=3 format=2]

[ext_resource path="res://BpixTextReplace.gd" type="Script" id=1]
[ext_resource path="res://TagTypeButton.gd" type="Script" id=2]

[node name="Control" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 620, 524 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="ColorRect" parent="."]
margin_right = 1100.0
margin_bottom = 584.0
rect_min_size = Vector2( 600, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.184314, 0.282353, 0.25098, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1100.0
margin_bottom = 584.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 620.0
margin_bottom = 584.0
rect_min_size = Vector2( 600, 0 )

[node name="Title" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 620.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 15 )
custom_constants/margin_top = 8

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/Title"]
margin_top = 8.0
margin_right = 620.0
margin_bottom = 38.0
rect_min_size = Vector2( 600, 30 )
bbcode_enabled = true
bbcode_text = "[center]LP Beach Bpix Text Replacer[/center]
[right]~Made by The Flying Twybil   [/right]"
text = "LP Beach Bpix Text Replacer
~Made by The Flying Twybil   "
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 620.0
margin_bottom = 46.0

[node name="Instructions" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 620.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 20 )
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/Instructions"]
margin_left = 10.0
margin_right = 610.0
margin_bottom = 170.0
rect_min_size = Vector2( 600, 170 )
bbcode_enabled = true
bbcode_text = "To use, copy your update text into the Update box and your image links into the Links box. Make sure your image tags are using the selected tag format on the right and hit \"Replace Text\" to replace the update text.
	
	If your portrait tags have some numbers in them, (such as \"npcsad_01\",) enable numeric safety on the right to prevent the program misinterpreting them.
	
	The program parses the image tags linearly. Thus, the first image link  should correspond to whatever your first image tag's number is. The program will calculate ahead of time any missing numbers in the sequence, thus if you have a #01 and #03, but no #02, it will assign the second image link to be #03 instead."
text = "To use, copy your update text into the Update box and your image links into the Links box. Make sure your image tags are using the selected tag format on the right and hit \"Replace Text\" to replace the update text.
	
	If your portrait tags have some numbers in them, (such as \"npcsad_01\",) enable numeric safety on the right to prevent the program misinterpreting them.
	
	The program parses the image tags linearly. Thus, the first image link  should correspond to whatever your first image tag's number is. The program will calculate ahead of time any missing numbers in the sequence, thus if you have a #01 and #03, but no #02, it will assign the second image link to be #03 instead."
scroll_active = false

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 224.0
margin_right = 620.0
margin_bottom = 228.0

[node name="txtentry" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 232.0
margin_right = 620.0
margin_bottom = 372.0
rect_min_size = Vector2( 0, 140 )
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/txtentry"]
margin_left = 5.0
margin_right = 615.0
margin_bottom = 140.0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/txtentry/VBoxContainer"]
margin_right = 610.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Update Text:
"
scroll_active = false

[node name="UpdateEntry" type="TextEdit" parent="HBoxContainer/VBoxContainer/txtentry/VBoxContainer"]
margin_top = 24.0
margin_right = 610.0
margin_bottom = 140.0
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 376.0
margin_right = 620.0
margin_bottom = 380.0

[node name="txtlinks" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 384.0
margin_right = 620.0
margin_bottom = 524.0
rect_min_size = Vector2( 0, 140 )
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/txtlinks"]
margin_left = 5.0
margin_right = 615.0
margin_bottom = 140.0

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/txtlinks/VBoxContainer"]
margin_right = 610.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Links:"
scroll_active = false

[node name="LinkList" type="TextEdit" parent="HBoxContainer/VBoxContainer/txtlinks/VBoxContainer"]
margin_top = 24.0
margin_right = 610.0
margin_bottom = 140.0
size_flags_vertical = 3
show_line_numbers = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 528.0
margin_right = 620.0
margin_bottom = 574.0
rect_min_size = Vector2( 0, 40 )

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 620.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.321569, 0.407843, 0.368627, 1 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 620.0
margin_bottom = 46.0
custom_constants/margin_top = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/MarginContainer"]
margin_top = 8.0
margin_right = 620.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 30 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer"]
margin_right = 204.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 15

[node name="ReplaceButton" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer/MarginContainer"]
margin_left = 15.0
margin_right = 194.0
margin_bottom = 30.0
text = "Replace Text"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer"]
margin_left = 208.0
margin_right = 412.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_left = 10

[node name="CopyButton" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_right = 204.0
margin_bottom = 30.0
text = "Copy Result to Clipboard"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer"]
margin_left = 416.0
margin_right = 620.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="ClearButton" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 154.0
margin_bottom = 30.0
text = "Clear All"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 624.0
margin_right = 1100.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 10
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
margin_left = 5.0
margin_top = 10.0
margin_right = 471.0
margin_bottom = 579.0
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2"]
margin_right = 466.0
margin_bottom = 60.0

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer2"]
margin_right = 466.0
margin_bottom = 60.0
color = Color( 0.254902, 0.392157, 0.341176, 1 )

[node name="vbox" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer2"]
margin_right = 466.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="OptionsTitle" type="MarginContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer2/vbox"]
margin_right = 466.0
margin_bottom = 25.0
custom_constants/margin_top = 5

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer2/vbox/OptionsTitle"]
margin_top = 5.0
margin_right = 466.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 20 )
bbcode_enabled = true
bbcode_text = "[center]Tag Type:"
text = "Tag Type:"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer2/vbox"]
margin_top = 29.0
margin_right = 466.0
margin_bottom = 54.0
custom_constants/margin_right = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 5

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer2/vbox/MarginContainer2"]
margin_left = 50.0
margin_right = 416.0
margin_bottom = 20.0
script = ExtResource( 2 )

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/MarginContainer2/VBoxContainer2"]
margin_top = 64.0
margin_right = 466.0
margin_bottom = 68.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2"]
margin_top = 72.0
margin_right = 466.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 30 )
custom_constants/margin_right = 40
custom_constants/margin_left = 75

[node name="NumericSafetyButton" type="CheckButton" parent="HBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer"]
margin_left = 75.0
margin_right = 426.0
margin_bottom = 40.0
text = "Evaluate only fully numeric tags:"

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/MarginContainer2/VBoxContainer2"]
margin_top = 116.0
margin_right = 466.0
margin_bottom = 120.0

[node name="txtResult" type="MarginContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2"]
margin_top = 124.0
margin_right = 466.0
margin_bottom = 569.0
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 3
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/MarginContainer2/VBoxContainer2/txtResult"]
margin_left = 5.0
margin_top = 3.0
margin_right = 461.0
margin_bottom = 440.0
color = Color( 0.321569, 0.372549, 0.321569, 1 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2/txtResult"]
margin_left = 5.0
margin_top = 3.0
margin_right = 461.0
margin_bottom = 440.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2/txtResult/MarginContainer"]
margin_left = 10.0
margin_right = 446.0
margin_bottom = 437.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2/VBoxContainer2/txtResult/MarginContainer/VBoxContainer"]
margin_right = 436.0
margin_bottom = 29.0
custom_constants/margin_top = 9
custom_constants/margin_bottom = 4

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer2/VBoxContainer2/txtResult/MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 9.0
margin_right = 436.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 16 )
bbcode_enabled = true
bbcode_text = "[center] Resulting Update Text:"
text = " Resulting Update Text:"

[node name="Result" type="TextEdit" parent="HBoxContainer/MarginContainer2/VBoxContainer2/txtResult/MarginContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 436.0
margin_bottom = 437.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.94902, 0.94902, 0.94902, 1 )
custom_colors/font_color_readonly = Color( 0.843137, 0.843137, 0.843137, 1 )
readonly = true
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer/MarginContainer/ReplaceButton" to="." method="_on_ReplaceButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer/MarginContainer2/CopyButton" to="." method="_on_CopyButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/MarginContainer/HBoxContainer/MarginContainer3/ClearButton" to="." method="_on_ClearButton_pressed"]
